# cats-llvm

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  gemm.cpp  test_cats_runtime.c
passes/: CMakeLists.txt  allocation_tracker.cpp  cats_pass_utils.cpp  cats_passes.cpp  cats_passes.hpp  catspass.cpp  function_scope_tracker.cpp  load_store_tracker.cpp  loop_scope_tracker.cpp  omp_scope_finder.cpp  parallel_scope_tracker.cpp
runtime/: CMakeLists.txt  cats_runtime.cpp  cats_runtime.h
tests/: test_cats_runtime.c
